--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 html,
 body,
 div,
@@ -85,6 +92,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Pretendard-Regular';
+
 }
 /* HTML5 display-role reset for older browsers */
 article,
