--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ html {
   height: 100%;
 }
 .page {
-  color: white;
   font-size: 40px;
   min-height: 800px;
   width: 100%;
@@ -40,12 +39,16 @@ html {
 }
 
 .main_img {
-  width: 500px;
+  width: 400px;
   margin: 0 auto;
   padding-top: 150px;
   margin-bottom: 50px;
 }
-
+@media screen and (min-width: 740px) {
+  .main_img {
+    width: 600px;
+  }
+}
 .main_img img {
   width: 100%;
   height: 100%;
