--- a/detail_1.css
+++ b/detail_1.css
@@ -22,12 +22,12 @@ body {
 
 .prev {
     position: absolute;
-    left: 20px;
+    left: 1vw;
 }
 
 .next {
     position: absolute;
-    left: 1765px;
+    left: 98vw;
 }
 
 .container {
@@ -122,14 +122,38 @@ img {
     grid-column: 3 / span 1;
     grid-row: span 2;
     padding: 20px;
+    display: grid;
+    grid-template-rows: 1.5fr 1fr 7fr;
+}
+
+.icons {
     display: flex;
-    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.icon {
+    background-color: #F4F4F4;
+    border-radius: 50%;
+    width: 123px;
+    height: 123px;
+    margin-right: 1.5vw;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.icon img { 
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    align-self: center;
 }
 
 .guest__log {
-    margin-top: 23px;
-    width: 95%;
-    height: 85%;
+    margin-top: 1vh;
+    width: 48vw;
+    height: 70vh;
     background-color: #F4F4F4;
     border-radius: 20px;
     display: flex;
@@ -141,8 +165,8 @@ img {
 }
 
 .comment__box {
-    width: 95%;
-    height: 12%;
+    width: 45vw;
+    height: 9vh;
     background-color: white;
     border-radius: 8px;
     display: flex;
