상세페이지 코드 일부 수정

--- a/css/reset.css
+++ b/css/reset.css
@@ -140,3 +140,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button{
+  background: inherit ; 
+  border:none; 
+  box-shadow:none; 
+  border-radius:0; 
+  padding:0; 
+  overflow:visible; 
+  cursor:pointer
+}
