--- a/css/detail.css
+++ b/css/detail.css
@@ -85,10 +85,13 @@ img {
     background-color: white;
     grid-column: 1 / span 2;
     grid-row: 2 / span 1;
-    padding: 30px 60px;
-    display: grid;
     grid-template-rows: repeat(2, 1fr);
     box-sizing: border-box;
+}
+
+.left-bottom-wrap {
+    padding: 30px 60px;
+
 }
 
 .aboutMe__tags {
@@ -115,6 +118,8 @@ img {
     font-size: 22px;
     font-weight: 400;
     margin-top: 50px;
+    line-height: 40px;
+
 }
 
 .right {
