--- a/css/detail.css
+++ b/css/detail.css
@@ -203,21 +203,41 @@ img {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 30px 5px;
     box-sizing: border-box;
 }
 
-.comment__box {
-    width: 45vw;
-    height: 9vh;
+.gest__log-input {
+    width: 95%;
+    height: 15%;
     background-color: white;
     border-radius: 8px;
     display: flex;
     align-items: flex-start;
     padding: 11px;
     box-sizing: border-box;
+}
+
+.comment__boxs {
+    display: flex;
+    overflow-y: scroll;
+    align-items: center;
+    flex-direction: column;
+    height: 80%;
+    width: 100%;
+}
+
+.comment__box {
+    width: 95%;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    align-items: flex-start;
+    padding: 11px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
 }
 
 .user {
@@ -231,12 +251,18 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 35px;
     background-color: #F4F4F4;
+    min-height: 45px;
     border-radius: 20px;
     padding: 0px 20px 0px 15px;
     box-sizing: border-box;
     margin-top: 5px;
+}
+
+.comment span {
+    height: 100%;
+    padding: 10px 0;
+    line-height: 23px;
 }
 
 .comment input {
@@ -245,8 +271,26 @@ img {
     background-color: transparent;
 }
 
+
+
 .comment i {
     color: rgba(0, 0, 0, 0.7);
+}
+
+.commnet-icons {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.commnet-icons button{
+    margin: 0 5px;
+    width: 15px;
+    cursor: pointer;
+}
+.commnet-icons button img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .profile__img > img {
