--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ html {
 }
 
 .team_profile:nth-child(3) {
-  background-color: #8FBCDB;
+  background-color: #8fbcd8;
 }
 
 .team_profile:nth-child(4) {
@@ -143,17 +143,14 @@ html {
 
 .team_profile:nth-child(6) img {
   top: 0%;
+  left: 10%;
 }
 /*-------------------------------*/
 
-.team_profile a {
+.team_profile a{
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
+  width: 100%;
+  height: 100%;
 }
 
 .team_name {
@@ -165,13 +162,13 @@ html {
 }
 
 .circle {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  width: 88%;
   border-radius: 50%;
   background-color: white;
   aspect-ratio: 1/1;
-  margin: 25px 40px;
-  box-sizing: border-box;
+  top: 7%;
+  left: 6%;
 }
 
 .team_photo {
