--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,12 @@ html {
   scroll-snap-type: y mandatory;
 }
 
+.inner_wrap{
+  width: calc(150vh - 225px);
+  height: 100%;
+  margin: 0 auto;
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -20,6 +26,12 @@ html {
   text-align: center;
   font-size: 100px;
   z-index: 1;
+}
+
+.header_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 740px) {
@@ -42,7 +54,7 @@ html {
   width: 400px;
   margin: 0 auto;
   padding-top: 150px;
-  margin-bottom: 50px;
+  margin-bottom: 10vh;
 }
 @media screen and (min-width: 740px) {
   .main_img {
@@ -61,14 +73,12 @@ html {
 }
 
 .introduce_text {
-  gap: 10px;
   display: flex;
   margin: 0 50px;
   margin-top: 50px;
   font-size: 30px;
   justify-content: space-between;
   flex-direction: column;
-  align-items: center;
   color: #000;
 }
 @media screen and (min-width: 740px) {
