--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ html {
 
 .team_profile:nth-child(6) img {
   top: 0%;
-  left: 10%;
+  left: 11%;
 }
 /*-------------------------------*/
 
@@ -164,21 +164,19 @@ html {
 }
 
 .team_name {
-  font-size: 18px;
-  position: absolute;
-  top: 5px;
-  left: 3px;
+  margin: 3%;
+  font-size: 70%;
 
 }
 
 .circle {
-  position: absolute;
-  width: 88%;
+  position: relative;
+  width: 80%;
   border-radius: 50%;
   background-color: white;
   aspect-ratio: 1/1;
-  top: 7%;
-  left: 6%;
+  margin-top: 4%;
+  margin-left: 10%;
 }
 
 .team_photo {
@@ -190,12 +188,12 @@ html {
 
 .circle:hover {
   background-color: transparent;
-  transition: 0.5s;
+  transition: 0.2s;
 }
 
 .circle:hover .team_photo {
   transform: scale(1.2);
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 
 @media screen and (min-width: 740px) {
