--- a/css/detail.css
+++ b/css/detail.css
@@ -5,9 +5,9 @@
     background: inherit ; border:none; box-shadow:none; border-radius:0; padding:0; overflow:visible; cursor:pointer
 } */
 
-* {
+/* * {
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
 
 body {
   margin: 0px;
