--- a/css/reset.css
+++ b/css/reset.css
@@ -1,8 +1,12 @@
-@font-face {
+/* @font-face {
   font-family: 'Pretendard-Regular';
   src: url('../Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
+} */
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html,
@@ -92,7 +96,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: 'Pretendard-Regular';
+  /* font-family: 'Pretendard-Regular'; */
+  font-family: Arial, Helvetica, sans-serif;
 
 }
 /* HTML5 display-role reset for older browsers */
