--- a/css/reset.css
+++ b/css/reset.css
@@ -5,8 +5,10 @@
   font-style: normal;
 } */
 
+@import url('https://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro');
+
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Neue Haas Grotesk Display Pro', sans-serif;
 }
 
 html,
