Style. 방명록 창 복구

--- a/css/detail.css
+++ b/css/detail.css
@@ -256,6 +256,11 @@ img {
   width: 95%;
   margin-left: 10px;
 }
+.input {
+  flex-direction: column;
+  align-items: normal;
+  justify-content: normal;
+}
 .user-btn {
   display: flex;
   flex-direction: column;
