--- a/css/detail.css
+++ b/css/detail.css
@@ -144,6 +144,22 @@ img {
   padding: 20px;
   display: grid;
   grid-template-rows: 1.5fr 1fr 7fr;
+  position: relative;
+}
+
+.right .close {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  display: block;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.right .close img {
+  width: 100%;
+  height: 100%;
 }
 
 .icons {
